Flight Ticket Booking Project

--- a/FlightTicketBooking/src/main/resources/application.properties
+++ b/FlightTicketBooking/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password= friendship87
 spring.jpa.show-sql= true
 spring.jpa.ddl-auto = update
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port= 9192
